--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@mapbox/mapbox-sdk": "^0.13.3",
     "cloudinary": "^1.29.0",
     "connect-flash": "^0.1.1",
+    "connect-mongo": "^4.6.0",
     "dotenv": "^16.0.0",
     "ejs": "^3.1.6",
     "ejs-mate": "^3.0.0",
@@ -25,6 +26,7 @@
     "nodemon": "^2.0.15",
     "passport": "^0.5.2",
     "passport-local": "^1.0.0",
-    "passport-local-mongoose": "^7.0.0"
+    "passport-local-mongoose": "^7.0.0",
+    "sanitize-html": "^2.7.0"
   }
 }
